# anima

./: .env.example  ARCHITECTURE.md  LICENSE  pyproject.toml
.claude/skills/shrink/: SKILL.md
anima/: config.py  state.py
anima/agents/: orchestrator.py
anima/layers/: conscious.py  preconscious.py
freudian_mind/: __init__.py  cli.py  config.py  mind.py  models.py  state.py
freudian_mind/agents/: __init__.py  runner.py
freudian_mind/layers/: conscious.py  unconscious.py
freudian_mind/prompts/: classifier_prompts.py  conscious_prompts.py  preconscious_prompts.py  unconscious_prompts.py
freudian_mind/systems/: defense.py  growth.py  neurosis.py  outcome.py
reference/: freudian_feedback.py  freudian_mind_v3.py
src/anima/: config.py  llm.py  mind.py  models.py  state.py  telegram.py
src/anima/agents/: models.py  orchestrator.py  runner.py
src/anima/layers/: conscious.py  preconscious.py  unconscious.py
src/anima/prompts/: conscious_prompts.py  preconscious_prompts.py  superego_prompts.py  unconscious_prompts.py
src/anima/systems/: defense.py  growth.py  idea_space.py  neurosis.py  outcome.py  superego.py
tests/: conftest.py  test_behavioral.py  test_conscious.py  test_defense.py  test_defense_mapping.py  test_e2e.py  test_growth.py  test_idea_space.py  test_integration.py  test_models.py  test_neurosis.py  test_orchestrator_behavior.py  test_outcome.py  test_preconscious.py  test_state.py  test_superego.py  test_telegram.py  test_unconscious.py
