[project]
name = "anima"
version = "0.1.0"
description = "A three-layer cognitive architecture inspired by Freud's topographical model"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40.0",
    "numpy>=1.24",
    "aiosqlite>=0.20",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.115", "uvicorn>=0.30", "websockets>=12.0"]
telegram = ["python-telegram-bot>=21.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-cov>=5.0", "ruff>=0.5"]

[project.scripts]
anima = "anima.cli:main"
anima-telegram = "anima.telegram:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anima"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
